<resources>
    <string name="app_name">mysettings-fragment</string>

    <string name="main_settings">设置_fragment</string>

    <!--关于本机-->
    <string name="about_title">关于本机</string>
    <string name="about_device_model">设备型号：</string>
    <string name="about_software_version">软件版本：</string>
    <string name="about_system_version">安卓版本：</string>
    <string name="about_mac">MAC地址：</string>
    <string name="about_stbid">STBID：</string>
    <string name="about_auth_addr1">认证业务主地址：</string>
    <string name="about_auth_addr2">认证业务备地址：</string>
    <string name="about_terminal_addr1">终端管理主地址：</string>
    <string name="about_terminal_addr2">终端管理备地址：</string>
    <string name="about_auth_account">认证业务账号：</string>


    <!--网络-->
    <string name="eth_title">网络配置</string>
    <string name="eth_ethernet_sets">有线网络设置</string>
    <string name="eth_manager_eth">设置和管理有线网络</string>
    <string name="eth_bluetooth_sets">设置蓝牙</string>
    <string name="eth_connected">已连接</string>
    <string name="eth_pppoe">PPPoE</string>
    <string name="eth_dhcp">DHCP</string>
    <string name="eth_static">静态IP</string>
    <string name="eth_dhcp_connect_success">DHCP连接成功</string>
    <string name="eth_dhcp_connect_failed">DHCP连接失败</string>
    <string name="eth_pppoe_title">有线PPPoE</string>
    <string name="eth_pppoe_username">用户名：</string>
    <string name="eth_pppoe_password">密码：</string>
    <string name="eth_pppoe_confirm">确定</string>
    <string name="eth_pppoe_cancel">取消</string>
    <string name="eth_pppoe_username_empty">用户名不能为空</string>
    <string name="eth_pppoe_userpwd_empty">密码不能为空</string>
    <string name="eth_pppoe_connect_success">PPPoE连接成功</string>
    <string name="eth_pppoe_connect_failed_999">999, PPPoE拨号失败</string>
    <string name="eth_pppoe_connect_failed_other">PPPoE拨号失败</string>
    <string name="eth_static_title">有线静态</string>
    <string name="eth_ip">IP地址：</string>
    <string name="eth_netmask">子网掩码：</string>
    <string name="eth_gateway">默认网关：</string>
    <string name="eth_dns1">主用DNS：</string>
    <string name="eth_dns2">备用DNS：</string>
    <string name="eth_static_confirm">确定</string>
    <string name="eth_static_cancel">取消</string>
    <string name="eth_static_connect_success">静态IP连接成功</string>
    <string name="eth_static_connect_failed">静态IP连接失败</string>
    <string name="eth_static_net_available">网络可用</string>
    <string name="eth_connecting">正在连接请稍候...</string>
    <string name="eth_static_ip_null">IP不能为空</string>
    <string name="eth_static_mask_null">子网掩码不能为空</string>
    <string name="eth_static_gateway_null">默认网关不能为空</string>
    <string name="eth_static_dns1_null">主用DNS不能为空</string>
    <!--备用dns可以为空-->
    <string name="eth_static_dns2_null">不能为空</string>
    <string name="eth_static_ip_illegal">IP不合法</string>
    <string name="eth_static_mask_illegal">子网掩码不合法</string>
    <string name="eth_static_gateway_illegal">默认网关不合法</string>
    <string name="eth_static_dns1_illegal">主用DNS不合法</string>
    <string name="eth_static_dns2_illegal">备用DNS不合法</string>
    <string name="eth_static_ip_gateway_err">IP和网关不在同一个网段</string>
    <string name="eth_no_cable">网线脱落</string>
    <string name="eth_default_value">0.0.0.0</string>
    <string name="eth_bluetooth_title">设置蓝牙</string>
    <string name="eth_bluetooth_switch">蓝牙开关</string>
    <string name="eth_bluetooth_bind">已绑定</string>
    <string name="eth_bluetooth_unbind">未绑定</string>
    <string name="eth_bluetooth_no_adapter">该设备不支持蓝牙</string>
    <string name="eth_bluetooth_turning_on">正在开启蓝牙</string>
    <string name="eth_bluetooth_on">蓝牙开启成功</string>
    <string name="eth_bluetooth_turning_off">正在关闭蓝牙</string>
    <string name="eth_bluetooth_off">蓝牙关闭成功</string>
    <string name="eth_bluetooth_bonding">正在绑定设备...</string>
    <string name="eth_bluetooth_bond_none">正在解绑该设备</string>
    <string name="eth_bluetooth_paired">已配对</string>
    <string name="netinfo_eth_connected">有线网络已连接：%1$s</string>
    <string name="netinfo_eth_no_connect">有线网络</string>

    <!--日期与时间 dt: date&time-->
    <string name="dt_title">日期与时间</string>
    <string name="dt_setting">设置日期和时间</string>
    <string name="dt_use_24_format">使用24小时格式</string>
    <string name="dt_select_date_format">选择日期格式</string>
    <string name="dt_time_server">时间服务器设置</string>
    <string name="dt_time_server1">主时间同步服务器地址</string>
    <string name="dt_time_server2">备时间同步服务器地址</string>
    <string name="dt_format_used">当前格式已生效</string>
    <string name="dt_default_format">区域(yyyy-M-d)</string>

    <!--显示-->
    <string name="display_title1">设置分辨率</string>
    <string name="display_title2">改变图像位置</string>
    <string name="display_resolution">分辨率</string>
    <string name="display_scale">调整画面输出区域</string>
    <string name="display_adapt">自适应</string>
    <string name="display_1080p_60">1080P 60</string>
    <string name="display_1080p_50">1080P 50</string>
    <string name="display_1080p_30">1080P 30</string>
    <string name="display_1080p_25">1080P 25</string>
    <string name="display_1080p_24">1080P 24</string>
    <string name="display_1080i_60">1080I 60</string>
    <string name="display_1080i_50">1080I 50</string>
    <string name="display_720p_60">720P 60</string>
    <string name="display_720p_50">720P 50</string>
    <string name="display_576p_50">576P 50</string>
    <string name="display_480p_60">480P 60</string>
    <string name="display_pal">PAL</string>
    <string name="display_ntsc">NTSC</string>
    <string name="display_3840x2160p_24">3840X2160P 24</string>
    <string name="display_3840x2160p_25">3840X2160P 25</string>
    <string name="display_3840x2160p_30">3840X2160P 30</string>
    <string name="display_3840x2160p_60">3840X2160P 60</string>
    <string name="display_3840x2160p_50">3840X2160P 50</string>
    <string name="display_4096x2160p_24">4096X2160P 24</string>
    <string name="display_4096x2160p_25">4096X2160P 25</string>
    <string name="display_4096x2160p_30">4096X2160P 30</string>
    <string name="display_4096x2160p_60">4096X2160P 60</string>
    <string name="display_4096x2160p_50">4096X2160P 50</string>
    <string name="display_first_confirm_title">第一次确认</string>
    <string name="display_second_confirm_title">第二次确认</string>
    <string name="display_first_confirm_text1">你的分辨率已经重新配置这些设置，是否继续？</string>
    <string name="display_timer_text"> 秒后恢复设置</string>
    <string name="display_scale_prompt_text">
        请按上/下/左/右键调整画面输出区域，按返回键退出（注：请确保边框在可见区域内）
    </string>


    <!--存储信息-->
    <string name="storage_title">存储信息</string>
    <string name="storage_total">总容量</string>
    <string name="storage_available">可用空间</string>
    <string name="storage_number">存储设备个数：%1$d</string>
    <string name="storage_uninstall">卸载外部存储设备</string>
    <string name="storage_mounted">qll_设备挂载成功</string>
    <string name="storage_unmounted">qll_设备卸载成功</string>
    <string name="storage_dialog_title">信息</string>
    <string name="storage_dialog_propmt">存储设备将要被卸载</string>
    <string name="storage_no_device_unmount">没有设备可被卸载</string>

    <!--高级设置-->
    <string name="advanced_title">高级设置</string>
    <string name="advanced_confirm">确定</string>
    <string name="advanced_wrong_pwd">您输入的密码有误</string>
    <string name="advanced_clear_all">一键清理</string>
    <string name="advanced_title_2">休眠功能设置</string>
    <string name="advanced_auto_sleep_1">电视待机后，5 分钟后机顶盒自动待机</string>
    <string name="advanced_auto_sleep_2">无遥控器操作，4 小时后机顶盒自动待机</string>
    <string name="advanced_dialog_prompt">因长时间无操作，系统即将自动待机</string>
    <string name="advanced_dialog_time_text">倒计时 %1$d 秒</string>
    <string name="advanced_continue_watch">继续观看</string>
    <string name="advanced_cache_size">可清理垃圾：%1$s</string>


    <!--恢复出厂设置-->
    <string name="reset_title">恢复出厂设置</string>
    <string name="reset_box">重置机顶盒</string>
    <string name="reset_info0">这将清除内存所有数据，包括：</string>
    <string name="reset_info1">- 你的账户</string>
    <string name="reset_info2">- 系统和应用程序的数据设置</string>
    <string name="reset_info3">- 下载的应用</string>
    <string name="reset_confirm">确定</string>
    <string name="reset_cancel">取消</string>
    <string name="reset_dialog_title">信息</string>


    <!--dialog-->
    <string name="dialog_title">信息：</string>
    <string name="dialog_content_unbond">确定与设备【%1$s】解绑吗？</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="default_password">10086</string>
    <string name="password">密码：</string>
</resources>