<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/title_tv_style"
        android:text="@string/display_title1" />

    <LinearLayout
        style="@style/focusable_ll_style"
        android:id="@+id/display_ll_resolution">
        <TextView
            style="@style/display_tv_style"
            android:text="@string/display_resolution" />

    </LinearLayout>

    <TextView
        style="@style/title_tv_style"
        android:text="@string/display_title2" />

    <LinearLayout
        style="@style/focusable_ll_style"
        android:id="@+id/display_ll_scale">
        <TextView
            style="@style/display_tv_style"
            android:text="@string/display_scale"/>

    </LinearLayout>

</LinearLayout>