<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="900dp"
    android:layout_height="match_parent">

    <TextView
        style="@style/title_tv_style"
        android:text="@string/reset_title" />

    <LinearLayout
        style="@style/ad_reset_ll_style">
        <TextView
            style="@style/tv_base_style"
            android:text="@string/password"/>
        <EditText
            style="@style/ad_reset_et_pwd_style"
            android:id="@+id/reset_et_pwd"/>
    </LinearLayout>



    <TextView
        style="@style/ad_reset_tv_error_style"
        android:id="@+id/reset_tv_alarm"/>

    <Button
        style="@style/btn_base_style"
        android:id="@+id/reset_btn_confirm"
        android:text="@string/reset_box"/>


</LinearLayout>