<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/title_tv_style"
        android:text="@string/eth_pppoe2"/>

    <LinearLayout
        style="@style/ll_vertical_base_style"
        android:layout_marginTop="80dp">
        <TextView
            style="@style/eth_tv_pppoe_key_style"
            android:layout_width="250dp"
            android:text="@string/eth_pppoe_username"/>
        <EditText
            style="@style/eth_et_pppoe_style"
            android:id="@+id/pppoe_et_username" />

    </LinearLayout>

    <LinearLayout
        style="@style/ll_vertical_base_style"
        android:layout_marginTop="50dp">
        <TextView
            style="@style/eth_tv_pppoe_key_style"
            android:layout_width="250dp"
            android:text="@string/eth_pppoe_password"/>
        <EditText
            style="@style/eth_et_pppoe_style"
            android:inputType="numberPassword"
            android:id="@+id/pppoe_et_password" />

    </LinearLayout>


    <LinearLayout
        style="@style/ll_vertical_base_style"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|end">

        <Button
            style="@style/eth_btn_pppoe_style"
            android:text="@string/eth_pppoe_confirm"
            android:id="@+id/pppoe_btn_confirm" />
        <Button
            style="@style/eth_btn_pppoe_style"
            android:layout_marginStart="20dp"
            android:text="@string/eth_pppoe_cancel"
            android:id="@+id/pppoe_btn_cancel" />
    </LinearLayout>

</LinearLayout>