<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="900dp"
    android:layout_height="match_parent">

    <TextView
        style="@style/title_tv_style"
        android:text="@string/advanced_title" />

    <EditText
        style="@style/et_base_style"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:id="@+id/advanced_et_pwd"/>

    <TextView
        style="@style/tv_base_style"
        android:textColor="@color/red"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        android:text="@string/advanced_wrong_pwd"
        android:layout_gravity="center"
        android:id="@+id/advanced_tv_alarm"/>

    <Button
        style="@style/btn_base_style"
        android:id="@+id/advanced_btn_confirm"
        android:text="@string/advanced_confirm"/>


</LinearLayout>